# FastAPIwebsite

./: .gitignore  README.md  alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 1__7c5fa1086521_db_creation.py  2__2395c01f3612_user_extra_fields.py
src/: config.py  database.py  main.py  repository.py  unit_of_work.py
src/auth/: config.py  models.py  schemas.py  services.py
src/flats/: models.py  repository.py  router.py  schemas.py  search_filters.py  services.py
src/tasks/: celery_tasks.py  email_maker.py
